traces/bug_818.txt
src/fflib/problem.cpp:2131: error: DEAD_STORE
  The value written to &umx (type double) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:2131:23: Write of unused value
2129.                         
2130.                     {
2131.                         double umx=std::numeric_limits<double>::min(),umn=std::numeric_limits<double>::max();
                              ^
2132.                         for(int i=0;i<4;++i)
2133.                         {
